--- a/gb/20/8/26/n12359922.md
+++ b/gb/20/8/26/n12359922.md
@@ -1,21 +1,21 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ziwjct344/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ziwjct344/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ziwjct344/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ziwjct344/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ziwjct344/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ziwjct344/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ziwjct344/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ziwjct344/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ziwjct344/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ziwjct344/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ziwjct344/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ziwjct344/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ziwjct344/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ziwjct344/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ziwjct344/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ziwjct344/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ziwjct344/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ziwjct344/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ziwjct344/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ziwjct344/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ziwjct344/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ziwjct344/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ziwjct344/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ziwjct344/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ziwjct344/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ziwjct344/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ziwjct344/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ziwjct344/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ziwjct344/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ziwjct344/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ziwjct344/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ziwjct344/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ziwjct344/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/ziwjct344/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ziwjct344/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ziwjct344/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ziwjct344/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ziwjct344/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ziwjct344/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ziwjct344/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ziwjct344/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ziwjct344/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ziwjct344/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ziwjct344/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ziwjct344/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ziwjct344/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ziwjct344/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>是什么导致奥克兰缺水？</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/08/GettyImages-1221724306-600x400.jpg" />
 <h6>是什么导致奥克兰缺水？图为2020年4月29日，位于新西兰奥克兰的胡努阿山脉（Hunua Ranges）的科西斯大坝（Cosseys Dam）的蓄水能力达到了50%。( Phil Walter/Getty Images)
 </h6>
 <hr>
-<p>【大纪元2020年08月27日讯】<span style="font-weight: 400;">（大纪元记者刘淇晴<ahref="https://github.com/ziwjct344/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>编译报导）<ahref="https://github.com/ziwjct344/djy/blob/master/gb/tag/%E5%A5%A5%E5%85%8B%E5%85%B0.md#1">奥克兰</a>自来水供应和处理公司Watercare因处理奥克兰用水危机不利，遭到了很多人的批评。Watercare负责人拉文·贾杜拉姆（Raveen Jaduram）也提出了辞职。但贾杜拉姆为什么会以辞职收场，奥克兰的用水危机又到底出了什么<ahref="https://github.com/ziwjct344/djy/blob/master/gb/tag/%E9%97%AE%E9%A2%98.md#1">问题</a>呢？</span></p>
+<p>【大纪元2020年08月27日讯】<span style="font-weight: 400;">（大纪元记者刘淇晴<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>编译报导）<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A5%A5%E5%85%8B%E5%85%B0.md#1">奥克兰</a>自来水供应和处理公司Watercare因处理奥克兰用水危机不利，遭到了很多人的批评。Watercare负责人拉文·贾杜拉姆（Raveen Jaduram）也提出了辞职。但贾杜拉姆为什么会以辞职收场，奥克兰的用水危机又到底出了什么<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%97%AE%E9%A2%98.md#1">问题</a>呢？</span></p>
 <h2><strong>Watercare负责人不得不离开</strong></h2>
 <p><span style="font-weight: 400;">最近几周，贾杜拉姆一直能感到来自政客和评论人士的压力。人们想知道，为什么Watercare对可预见的干旱处理不当，却要支付给他每年75万元的薪水。</span></p>
 <p><span style="font-weight: 400;">贾杜拉姆说他辞职是为了寻找其他机会，但有内部人士表示，贾杜拉姆已经失去了政府和董事会的信任，因此不得不离开。</span></p>
-<p><span style="font-weight: 400;"><ahref="https://github.com/ziwjct344/djy/blob/master/gb/tag/%E5%A5%A5%E5%85%8B%E5%85%B0.md#1">奥克兰</a>议员克里斯·达比（Chris Darby）表示，7月份Watercare向奥克兰市长菲尔·戈夫（Phil Goff）和他的团队索要2.24亿元资金应对用水危机，这让戈夫和他的团队非常恼怒。</span></p>
+<p><span style="font-weight: 400;"><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A5%A5%E5%85%8B%E5%85%B0.md#1">奥克兰</a>议员克里斯·达比（Chris Darby）表示，7月份Watercare向奥克兰市长菲尔·戈夫（Phil Goff）和他的团队索要2.24亿元资金应对用水危机，这让戈夫和他的团队非常恼怒。</span></p>
 <p><span style="font-weight: 400;">达比说，这笔费用不仅比他们预估的高出4400万元，而且他们正在因疫情危机处理紧急预算，当时政府已经在面临5.25亿元的财政赤字。他回忆那天的情形时说：“那天整个房间都炸锅了。”</span></p>
-<p><span style="font-weight: 400;">达比表示，面对这种危机级别的情况，他们除了资助Watercare别无选择，否则只会加剧<ahref="https://github.com/ziwjct344/djy/blob/master/gb/tag/%E7%BC%BA%E6%B0%B4.md#1">缺水</a><ahref="https://github.com/ziwjct344/djy/blob/master/gb/tag/%E9%97%AE%E9%A2%98.md#1">问题</a>。</span></p>
+<p><span style="font-weight: 400;">达比表示，面对这种危机级别的情况，他们除了资助Watercare别无选择，否则只会加剧<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%BC%BA%E6%B0%B4.md#1">缺水</a><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%97%AE%E9%A2%98.md#1">问题</a>。</span></p>
 <h2><strong>两份报告对Watercare提出批评</strong></h2>
 <p><span style="font-weight: 400;">与此同时，奥克兰议会管理机构(Council-Controlled Organisations，简称CCOs)收到了一份报告。该报告对Watercare和负责监督Watercare的市政府提出了严厉的批评。</span></p>
-<p><span style="font-weight: 400;">报告指出，许多人认为，Watercare没有为这样的<ahref="https://github.com/ziwjct344/djy/blob/master/gb/tag/%E7%BC%BA%E6%B0%B4.md#1">缺水</a>事件做好准备，且人们关心Watercare是否足够早地通知了地方政府关于干旱的风险和潜在成本。</span></p>
+<p><span style="font-weight: 400;">报告指出，许多人认为，Watercare没有为这样的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%BC%BA%E6%B0%B4.md#1">缺水</a>事件做好准备，且人们关心Watercare是否足够早地通知了地方政府关于干旱的风险和潜在成本。</span></p>
 <p><span style="font-weight: 400;">对于奥克兰政府，该报告说他们在一些关键领域，例如用水方面，根本就没有战略。</span></p>
 <p><span style="font-weight: 400;">另一份由苏格兰水管理机构委托的报告，则对Watercare的资产管理规划提出了批评，尤其是折旧和续期的问题。</span></p>
 <p><span style="font-weight: 400;">Watercare一直以低廉的水价引以为豪。对大多数奥克兰人来说，他们支付的水费要比2010年前还要少。</span></p>
@@ -24,7 +24,7 @@
 <h2><strong>奥克兰渗水情况越发严重</strong></h2>
 <p><span style="font-weight: 400;">虽然水利部门官方文件显示，奥克兰的地下自来水管泄露率大概为10%，但Watercare的统计显示，2019年的泄露率已超过13%。</span></p>
 <p><span style="font-weight: 400;">2007年Watercare的战略计划声明中便提到：“发现并修复漏水处可能是节约用水的一种非常有效的方法，尽管有时这样做的成本会超过开发新水源的成本。”</span></p>
-<p><span style="font-weight: 400;">然而，Watercare的水资源泄露数据表明，保护<ahref="https://github.com/ziwjct344/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>的水资源似乎还只停留在口头上。</span></p>
+<p><span style="font-weight: 400;">然而，Watercare的水资源泄露数据表明，保护<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>的水资源似乎还只停留在口头上。</span></p>
 <p><span style="font-weight: 400;">一位与Watercare关系密切的人士对Newsroom提到，Watercare有员工倡导充分利用现有地下管道直至其失效，就像开车时一直不做保养或维护直到把车子开到报废一个道理。</span></p>
 <h2><strong>供水系统抗压能力的风险</strong></h2>
 <p><span style="font-weight: 400;">对于增加水源供给的选择，Watercare一直偏爱于从怀卡托河取水，而非寻找其他方案，例如采集雨水。2007年的战略规划文件中表示安装雨水收集槽成本较高。</span></p>
@@ -64,48 +64,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ziwjct344/djy/blob/master/gb/13/3/1/n3811684.md#1">何清涟: 中国饮水卫生上的贫富差距</a></li>
-<li><a href="https://github.com/ziwjct344/djy/blob/master/gb/16/1/15/n4617401.md#1">新西兰游客暴增 旅游资源吃紧</a></li>
-<li><a href="https://github.com/ziwjct344/djy/blob/master/gb/17/4/4/n8998991.md#1">奥克兰节水通知正式解除</a></li>
-<li><a href="https://github.com/ziwjct344/djy/blob/master/gb/17/12/6/n9929562.md#1">干旱席卷新西兰全国 各地市政府呼吁节水</a></li>
-<li><a href="https://github.com/ziwjct344/djy/blob/master/gb/18/11/10/n10843238.md#1">纽国基督城通过提案 反对中国公司深井抽水</a></li>
-<li><a href="https://github.com/ziwjct344/djy/blob/master/gb/20/4/24/n12056764.md#1">【新西兰疫情4.24】新增5例 1死亡 工资补贴审计查违规</a></li>
-<li><a href="https://github.com/ziwjct344/djy/blob/master/gb/20/6/4/n12159433.md#1">持续干旱或严重阻碍纽经济重建</a></li>
-<li><a href="https://github.com/ziwjct344/djy/blob/master/gb/20/6/28/n12218075.md#1">奥克兰部分地区遭遇龙卷风造成严重破坏</a></li>
-<li><a href="https://github.com/ziwjct344/djy/blob/master/gb/20/7/4/n12231989.md#1">缺水严重的奥克兰水流失量超过节省量</a></li>
-<li><a href="https://github.com/ziwjct344/djy/blob/master/gb/20/7/10/n12245484.md#1">水系统全面改革 7.6亿元用于基础设施改造</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/3/1/n3811684.md#1">何清涟: 中国饮水卫生上的贫富差距</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/15/n4617401.md#1">新西兰游客暴增 旅游资源吃紧</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/4/4/n8998991.md#1">奥克兰节水通知正式解除</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/12/6/n9929562.md#1">干旱席卷新西兰全国 各地市政府呼吁节水</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/11/10/n10843238.md#1">纽国基督城通过提案 反对中国公司深井抽水</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/24/n12056764.md#1">【新西兰疫情4.24】新增5例 1死亡 工资补贴审计查违规</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/6/4/n12159433.md#1">持续干旱或严重阻碍纽经济重建</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/6/28/n12218075.md#1">奥克兰部分地区遭遇龙卷风造成严重破坏</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/7/4/n12231989.md#1">缺水严重的奥克兰水流失量超过节省量</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/7/10/n12245484.md#1">水系统全面改革 7.6亿元用于基础设施改造</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/14/n9839893.md#1" target="_blank">郭婉莹——被遗忘的“上海公主”</a></li><li><a href="https://github.com/ziwjct344/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/5/19/n3874295.md#1" target="_blank">飞瀑：中共酷刑——灌水</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/26/n10172889.md#1" target="_blank">袁斌：中共抓壮丁连老弱小孩也不放过</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/9/27/n3973738.md#1" target="_blank">净仁：通向人类生命的真正幸福</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ziwjct344/djy/blob/master/gb/20/6/29/n12218273.md#1">违背原著的宝玉出家</a></li>
-<li><a href="https://github.com/ziwjct344/djy/blob/master/gb/20/8/24/n12353478.md#1">以色列培育红母牛 为《圣经》末日预言准备</a></li>
-<li><a href="https://github.com/ziwjct344/djy/blob/master/gb/20/8/16/n12335682.md#1">神秘的中国绝代王后（下）</a></li>
-<li><a href="https://github.com/ziwjct344/djy/blob/master/gb/20/8/21/n12347600.md#1">七夕有哪些古风情？考古发现源流久远</a></li>
-<li><a href="https://github.com/ziwjct344/djy/blob/master/gb/20/8/24/n12353033.md#1">日本神秘湖泊“龙之眼” 演绎龙的传说</a></li>
-<li><a href="https://github.com/ziwjct344/djy/blob/master/gb/20/8/24/n12354500.md#1">【时事纵横】川普获正式提名 五角大楼进军6G</a></li>
-<li><a href="https://github.com/ziwjct344/djy/blob/master/gb/20/8/25/n12355300.md#1">【拍案惊奇】新疆封城憋到疯 数字币为维稳？</a></li>
-<li><a href="https://github.com/ziwjct344/djy/blob/master/gb/20/8/25/n12356989.md#1">【新闻第一现场】四川洪水来袭 多户惨遭灭门</a></li>
-<li><a href="https://github.com/ziwjct344/djy/blob/master/gb/20/8/24/n12352546.md#1">【翻墙必看】官二代爆王沪宁给习出馊主意</a></li>
-<li><a href="https://github.com/ziwjct344/djy/blob/master/gb/20/8/24/n12352544.md#1">田云：党媒连发5篇社论 中共急于表白什么？</a></li>
-<li><a href="https://github.com/ziwjct344/djy/blob/master/gb/20/7/28/n12290301.md#1">【思想领袖】章家敦：中共的行为已失控</a></li>
-<li><a href="https://github.com/ziwjct344/djy/blob/master/gb/20/8/23/n12351787.md#1">黄秋生返港大赞台湾 悲叹香港千疮百孔</a></li>
-<li><a href="https://github.com/ziwjct344/djy/blob/master/gb/20/8/25/n12357141.md#1">65岁张国立被搀扶拍戏 传遭吸毒家暴儿害惨</a></li>
-<li><a href="https://github.com/ziwjct344/djy/blob/master/gb/20/8/24/n12354392.md#1">范冰冰遭吴秀波起诉 疑涉李晨执导影片分账</a></li>
-<li><a href="https://github.com/ziwjct344/djy/blob/master/gb/20/8/23/n12351932.md#1">小童被迫看捧习书籍 杜汶泽嘲讽中共</a></li>
-<li><a href="https://github.com/ziwjct344/djy/blob/master/gb/20/8/23/n12352130.md#1">58岁知名导演陈木胜罹癌离世 香港众星悼念</a></li>
-<li><a href="https://github.com/ziwjct344/djy/blob/master/gb/20/8/22/n12350389.md#1">燕麦控三高助减肥 有7大好处 挑对更能稳血糖</a></li>
-<li><a href="https://github.com/ziwjct344/djy/blob/master/gb/20/8/24/n12354004.md#1">失智症能潜伏几十年？出现8个征兆要当心</a></li>
-<li><a href="https://github.com/ziwjct344/djy/blob/master/gb/20/8/24/n12353985.md#1">报复？36斤鲭鱼跃出水面 撞死澳洲钓鱼男</a></li>
-<li><a href="https://github.com/ziwjct344/djy/blob/master/gb/20/8/24/n12352785.md#1">万名印度人在台做啥？ 印籍中研院学者揭密</a></li>
-<li><a href="https://github.com/ziwjct344/djy/blob/master/gb/20/8/19/n12343660.md#1">【罗厨寻味】鱼肉酿秋葵</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13691255.md#1">【拍案惊奇】传中共深改办易主 王沪宁丢两权</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ziwjct344/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ziwjct344/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/26/n12359922.htm">是什么导致奥克兰缺水？</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/26/n12359922.htm">是什么导致奥克兰缺水？</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/ziwjct344/djy/blob/master/gb/20/8/26/n12359922.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ziwjct344/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ziwjct344/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ziwjct344/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ziwjct344/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ziwjct344/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ziwjct344/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ziwjct344/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ziwjct344/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ziwjct344/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ziwjct344/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ziwjct344/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ziwjct344/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ziwjct344/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ziwjct344/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ziwjct344/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ziwjct344/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ziwjct344/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ziwjct344/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ziwjct344/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ziwjct344/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ziwjct344/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ziwjct344/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ziwjct344/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ziwjct344/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ziwjct344/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ziwjct344/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ziwjct344/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ziwjct344/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ziwjct344/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ziwjct344/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ziwjct344/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ziwjct344/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ziwjct344/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ziwjct344/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ziwjct344/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ziwjct344/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ziwjct344/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ziwjct344/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ziwjct344/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ziwjct344/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ziwjct344/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ziwjct344/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ziwjct344/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ziwjct344/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ziwjct344/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ziwjct344/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ziwjct344/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ziwjct344/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/8/26/n12359922.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
